--- a/app/src/main/res/layout/course_activity.xml
+++ b/app/src/main/res/layout/course_activity.xml
@@ -96,5 +96,13 @@
         android:layout_below="@id/tab_layout"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/course_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="8dp"
+        android:layout_gravity="bottom|center"
+        android:layout_margin="10dp"
+        android:src="@drawable/ic_add_white_24dp"
+        app:fabSize="mini" />
 </android.support.design.widget.CoordinatorLayout>
