--- a/app/src/main/res/layout/sessionquestions_postquestions_main.xml
+++ b/app/src/main/res/layout/sessionquestions_postquestions_main.xml
@@ -5,40 +5,39 @@
     android:layout_height="match_parent"
     tools:context="com.example.esc_50005.UI.Session.Main.SessionActivity">
 
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/cv_input_qns">
+    <!--<android.support.v7.widget.CardView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/cv_input_qns">-->
 
-        <RelativeLayout
-            xmlns:tools="http://schemas.Android.com/tools"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:orientation="vertical"
-            android:id="@+id/ll1">
+        <!--<RelativeLayout-->
+            <!--xmlns:tools="http://schemas.Android.com/tools"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:orientation="vertical"-->
+            <!--android:id="@+id/ll1">-->
 
-            <EditText
-                android:id="@+id/questions_et_question"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:hint="Type Question Here!"
-                android:inputType="text" />
+            <!--<EditText-->
+                <!--android:id="@+id/questions_et_question"-->
+                <!--android:layout_width="300dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:hint="Type Question Here!"-->
+                <!--android:inputType="text" />-->
 
-            <Button
-                android:id="@+id/questions_btn_add"
-                android:layout_toRightOf="@+id/questions_et_question"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="+"
-                android:textSize="20dp"/>
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
+            <!--<Button-->
+                <!--android:id="@+id/questions_btn_add"-->
+                <!--android:layout_toRightOf="@+id/questions_et_question"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="+"-->
+                <!--android:textSize="20dp"/>-->
+        <!--</RelativeLayout>-->
+    <!--</android.support.v7.widget.CardView>-->
 
     <android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -55,12 +54,11 @@
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/faq_fab"
+        android:id="@+id/questions_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_margin="10dp"
         android:src="@drawable/ic_add_white_24dp"
         app:fabSize="mini" />
 
