--- a/app/src/main/res/layout/sessionquestions_postquestions_recycler.xml
+++ b/app/src/main/res/layout/sessionquestions_postquestions_recycler.xml
@@ -13,70 +13,60 @@
         style="@style/CardView.Light"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="-3dp"
+        android:layout_marginStart="-3dp"
         android:layout_marginTop="8dp"
         app:cardUseCompatPadding="true"
         tools:ignore="ContentDescription">
 
-        <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/questions_tv_question"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="#000000"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_chainStyle="packed" />
+                android:textAppearance="@style/CardView_Title" />
 
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/questions_tv_date"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:lineSpacingExtra="8dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textColor="#555555"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/questions_tv_upvotes"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/questions_tv_question"
-                app:layout_constraintVertical_bias="0.0" />
+                android:textAppearance="@style/CardView_Subtitle" />
 
             <TextView
                 android:id="@+id/questions_tv_upvotes"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:lineSpacingExtra="8dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textColor="#555555"
-                app:layout_constraintEnd_toStartOf="@id/questions_btn_upvote"
-                app:layout_constraintTop_toBottomOf="@+id/questions_tv_question" />
+                android:textAppearance="@style/CardView_Subtext"
+                android:layout_toLeftOf="@+id/questions_btn_upvote"/>
 
             <Button
                 android:id="@+id/questions_btn_upvote"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
                 android:text="Upvote"
-                android:textColor="#114488"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/questions_tv_question" />
+                android:layout_alignParentRight="true"/>
+            </RelativeLayout>
 
-        </android.support.constraint.ConstraintLayout>
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
