--- a/app/src/main/res/layout/my_progress_main.xml
+++ b/app/src/main/res/layout/my_progress_main.xml
@@ -6,6 +6,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="20dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:orientation="vertical">
 
         <!--<TextView-->
