--- a/app/src/main/res/layout/student_answer_frag.xml
+++ b/app/src/main/res/layout/student_answer_frag.xml
@@ -3,32 +3,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UI.Session.Student.StudentActivity.SideScreens.AnsweringZoneFrag"
-    android:background="#59000000"
+    android:background="#ffffff"
     android:clickable="true">
 
-    <RelativeLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerViewStudentQns"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="70dp"
-        android:background="#eeeeee">
+        android:layout_above="@+id/submitbutton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"></android.support.v7.widget.RecyclerView>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerViewStudentQns"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/submitbutton"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"></android.support.v7.widget.RecyclerView>
-
-        <Button
-            android:id="@+id/submitbutton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:background="#fafafa"
-            android:text="Submit"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-    </RelativeLayout>
+    <Button
+        android:id="@+id/submitbutton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorPrimary"
+        android:text="Submit"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
 </RelativeLayout>
