--- a/app/src/main/res/layout/student_quiz_recycler.xml
+++ b/app/src/main/res/layout/student_quiz_recycler.xml
@@ -25,7 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="6dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+                android:textAppearance="@style/CardView_Title"/>
 
             <RadioGroup
                 android:layout_width="match_parent"
@@ -36,22 +36,26 @@
                 <RadioButton
                     android:id="@+id/option1"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/CardView_Subtitle"/>
 
                 <RadioButton
                     android:id="@+id/option2"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/CardView_Subtitle"/>
 
                 <RadioButton
                     android:id="@+id/option3"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/CardView_Subtitle"/>
 
                 <RadioButton
                     android:id="@+id/option4"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/CardView_Subtitle"/>
 
             </RadioGroup>
 
