--- a/app/src/main/res/layout/studentquiz_results.xml
+++ b/app/src/main/res/layout/studentquiz_results.xml
@@ -1,41 +1,34 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.esc_50005.UI.Session.Student.StudentActivity.SideScreens.QuizResultsFrag"
-    android:background="#59000000"
+    android:background="#ffffff"
     android:clickable="true">
 
-    <RelativeLayout
+    <TextView
+        android:id="@+id/scoreHere"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/Toolbar_Subtitle"
+        android:textColor="#000000"
+        android:gravity="center_horizontal"
+        android:padding="5dp"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerViewStudentAns"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="70dp"
-        android:background="#eeeeee">
+        android:layout_above="@id/closebutton"
+        android:layout_below="@id/scoreHere"></android.support.v7.widget.RecyclerView>
 
-        <TextView
-            android:id="@+id/scoreHere"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="#000000"
-            android:gravity="center_horizontal"
-            android:padding="5dp"/>
+    <Button
+        android:id="@+id/closebutton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="#fafafa"
+        android:text="Close"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerViewStudentAns"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@id/closebutton"
-            android:layout_below="@id/scoreHere"></android.support.v7.widget.RecyclerView>
-
-        <Button
-            android:id="@+id/closebutton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:background="#fafafa"
-            android:text="Close"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-    </RelativeLayout>
-
-</FrameLayout>
+</RelativeLayout>
