--- a/app/src/main/res/layout/studquiz_recycler.xml
+++ b/app/src/main/res/layout/studquiz_recycler.xml
@@ -28,7 +28,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:padding="5dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textAppearance="@style/CardView_Title"
                 android:textColor="#000000" />
 
             <ImageView
