--- a/app/src/main/res/layout/dashboard_courses_recycler.xml
+++ b/app/src/main/res/layout/dashboard_courses_recycler.xml
@@ -2,9 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="30dp"
-    android:layout_marginLeft="30dp"
-    android:layout_marginRight="30dp"
+    android:layout_gravity="top|center"
+    android:gravity="center"
+    android:paddingTop="16dp"
+    android:paddingLeft="16dp"
     android:orientation="vertical"
     tools:context="com.example.esc_50005.UI.Dashboard.main.DashboardActivity">
 
@@ -12,35 +13,33 @@
         android:id="@+id/card_view"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_gravity="center"
         card_view:cardBackgroundColor="@color/colorDashboard"
         card_view:cardCornerRadius="4dp">
 
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
                 android:id="@+id/courseId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:paddingTop="50dp"
-                android:paddingLeft="20dp"
                 android:textAppearance="@style/CardView_Subtitle"
                 android:textColor="@color/colorTab"
-                card_view:layout_constraintBottom_toTopOf="@+id/courseName" />
+                android:layout_above="@+id/courseName"
+                />
 
             <TextView
-                android:paddingLeft="20dp"
+                android:layout_marginLeft="10dp"
+                android:paddingBottom="10dp"
                 android:id="@+id/courseName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:textAppearance="@style/CardView_Title"
                 android:textColor="@color/colorTab"
-                android:paddingBottom="0dp"
-                card_view:layout_constraintTop_toBottomOf="@+id/courseId" />
+                android:layout_alignParentBottom="true" />
 
             <ImageButton
                 android:id="@+id/delete_course"
@@ -49,10 +48,9 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/cross"
-                android:paddingTop="20dp"
-                card_view:layout_constraintRight_toRightOf="parent" />
+               android:layout_alignParentRight="true" />
 
-        </android.support.constraint.ConstraintLayout>
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
