Changed Fab button for course activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#E1595C</color>
     <color name="colorAccent">#E1595C</color>
     <color name="colorTab">#FFFFFF</color>
-    <color name="backgroundGrey">#F9F9F9</color>
+    <color name="backgroundGrey">#E9E9E9</color>
     <color name="white">#FFFFFF</color>
     <color name="colorHeadline">#111111</color>
     <color name="transparent">#00000000</color>
