--- a/app/src/main/res/layout/studentquiz_results.xml
+++ b/app/src/main/res/layout/studentquiz_results.xml
@@ -27,8 +27,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="#fafafa"
+        android:background="@color/colorPrimary"
         android:text="Close"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+        android:textAppearance="@style/Edit_button" />
 
 </RelativeLayout>
