--- a/app/src/main/res/layout/studentans_recycler.xml
+++ b/app/src/main/res/layout/studentans_recycler.xml
@@ -29,8 +29,8 @@
 
             <ImageView
                 android:id="@+id/option1pic"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@id/questionBox" />
 
