--- a/app/src/main/res/layout/dashboard_activity.xml
+++ b/app/src/main/res/layout/dashboard_activity.xml
@@ -18,10 +18,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Dashboard"
-            android:textAppearance="@style/CardView_Title"
-            android:textColor="@color/colorTab"
+            android:textAppearance="@style/Toolbar_Title"
             android:layout_gravity="center"
-            android:textSize="35dp"
             android:id="@+id/toolbar_title" />
 
     </android.support.v7.widget.Toolbar>
