--- a/app/src/main/res/layout/faq_recycler.xml
+++ b/app/src/main/res/layout/faq_recycler.xml
@@ -63,7 +63,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginEnd="16dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:lineSpacingExtra="8dp"
@@ -71,12 +71,22 @@
                     android:textAppearance="@style/CardView_Subtext"
                     android:layout_toLeftOf="@+id/faq_btn_upvote" />
 
+                <!--<Button-->
+                    <!--android:id="@+id/faq_btn_upvote"-->
+                    <!--style="@style/Widget.AppCompat.Button.Borderless"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="Upvote"-->
+                    <!--android:layout_alignParentRight="true"/>-->
+
                 <Button
                     android:id="@+id/faq_btn_upvote"
                     style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Upvote"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:background="@drawable/ic_favorite_black_24dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="12dp"
                     android:layout_alignParentRight="true"/>
             </RelativeLayout>
         </LinearLayout>
