--- a/app/src/main/res/layout/item_empty_view.xml
+++ b/app/src/main/res/layout/item_empty_view.xml
@@ -4,6 +4,7 @@
     android:id="@+id/empty_ll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundGrey"
     android:gravity="top"
     android:orientation="vertical">
 
