--- a/app/src/main/res/layout/sessionquestions_postquestions_recycler.xml
+++ b/app/src/main/res/layout/sessionquestions_postquestions_recycler.xml
@@ -50,31 +50,20 @@
                 android:id="@+id/questions_tv_upvotes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:lineSpacingExtra="8dp"
                 android:textAppearance="@style/CardView_Subtext"
                 android:layout_toLeftOf="@+id/questions_btn_upvote"/>
 
-            <!--<Button-->
-                <!--android:id="@+id/questions_btn_upvote"-->
-                <!--style="@style/Widget.AppCompat.Button.Borderless"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:text="Upvote"-->
-                <!--android:layout_alignParentRight="true"/>-->
-
-                <Button
-                    android:id="@+id/questions_btn_upvote"
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:background="@drawable/ic_favorite_black_24dp"
-                    android:layout_marginRight="16dp"
-                    android:layout_marginTop="12dp"
-                    android:layout_alignParentRight="true"/>
-
+            <Button
+                android:id="@+id/questions_btn_upvote"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Upvote"
+                android:layout_alignParentRight="true"/>
             </RelativeLayout>
 
         </LinearLayout>
